Adjusted spacing issue with difference card in about page
- Adjusted spacing issue with difference card in about page by creating new divs and styling it accordingly.
- Adjusted difference card place holder text to test sizing of card.
- Found slight scaling issue with difference card container that needs to be fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,11 @@ header {
     padding: 0 16px 100px;
 }
 
+.difference-card-container{
+    padding: 0 16px 20px;
+    padding-top: 20px;
+}
+
 .difference-container{
     padding-left: 100px;
     padding-right: 100px;
